<resources>
    <string name="app_name">2048</string>
    <string name="app_name_long">Privacy Friendly 2048 Game</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_game">Game</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_stat">Statistics</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ###MAIN### -->
    <string name="main_button_text">Full Width Button</string>
    <string name="main_button_disabled_text">Inactive Button</string>
    <string name="main_button_1">1</string>
    <string name="main_button_2">2</string>
    <string name="main_button_3">3</string>
    <string name="main_button_4">4</string>
    <string name="main_button_5">5</string>
    <string name="main_text_fullwithbutton_desc">A button that uses the full width of the screen looks like this:</string>
    <string name="main_text_disabledbutton_desc">A disabled button looks like this (any size):</string>
    <string name="main_text_title">This is an example app to demonstrate the design of a Privacy Friendly App. Further explanations can be found in the Privacy Friendly App Guide.</string>
    <string name="main_text_normalbutton_desc">There are multiple ways to display basic buttons. Button 1 is the basic button. If you wish to separate a button visually, use button 2. The buttons 3&#8211;5 are examples for highlighted buttons. Depending on the app other colors are possible.</string>
    <string name="main_button_welcomedialog_text">Use the button in the lower left corner to call the Welcome Dialog.</string>

    <!-- ###GAME###-->
    <string name="title_activity_game">Game</string>
    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>

    <!--###HELP###-->
    <string name="help">Help</string>

    <string name="help_whatis">What is Privacy Friendly App 2048?</string>
    <string name="help_whatis_answer">The Privacy Friendly App 2048 is a privacy friendly version of the well-known original game 2048. It has the same funktions without using data from the user.</string>
    <string name="help_color">How can I change the color spectre of the game?</string>
    <string name="help_color_answer">In the chapter configurations is an option to change between two color spectre for the game.</string>
    <string name="help_play">How does the game work?</string>
    <string name="help_play_answer">The goal of this game to get the number 2048. With combining numbers with the same value you can reach higher and higher numbers. You can find an extensive explanaition under the topic tutorial.</string>
    <string name="help_undo">Is it possible to undo steps?</string>
    <string name="help_undo_answer">The app gives you the option to undo your last step in the game. You have to click on the button with the arrow against clockwise direction.</string>
    <string name="help_tip">How to beat the game?</string>
    <string name="help_tip_answer">There are a few strategies to win this game. On YouTube you can find a lot of videos which are covering this topic.</string>
    <string name="help_historie">Why does this app exist?</string>
    <string name="help_historie_answer">This app was part of a master workshop at the Karlsruhe Institute of Technology. With the help of the senior researcher SECUSO we wrote and designed this privacy friendly alternative to the original game.</string>
    <string name="help_privacy">What makes the app privacy friendly?</string>
    <string name="help_privacy_answer">This privacy friendly app does not require any permission. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Which permissions requires the app?</string>
    <string name="help_permission_answer">This app does not require any permission.</string>



    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="version">Version: </string>
    <string name="version_number">v 2.0</string>
    <string name="about_author">Authors:</string>
    <string name ="about_author_names">Saskia Jacob and Julian Wadephul</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under GPLv3. Images copyright TU Darmstadt and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-2048">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_example_summary">Example Summary</string>

    <!-- ### TUTORIAL DIALOG ### -->
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">This App serves as a guideline to see the basic design of Privacy Friendly Apps. Here introduce your app in one or two sentences.</string>

    <string name="slide2_heading">Key Elements</string>
    <string name="slide2_text">Introduce key elements of your app. Do not introduce too many details.</string>

    <string name="slide3_heading">Github and Guide</string>
    <string name="slide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the Privacy Friendly App Guide.</string>

    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_floating_button">Floating Button</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- ### CHOOSE DIALOG ### -->
    <string name="cslide1_heading">Welcome!</string>
    <string name="cslide1_text">This App serves as a guideline to see the basic design of Privacy Friendly Apps. Here introduce your app in one or two sentences.</string>

    <string name="cslide2_heading">Key Elements</string>
    <string name="cslide2_text">Introduce key elements of your app. Do not introduce too many details.</string>

    <string name="cslide3_heading">Github and Guide</string>
    <string name="cslide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the Privacy Friendly App Guide.</string>

    <string name="cokay">Okay</string>
    <string name="cviewhelp">View Help</string>
    <string name="cmain_floating_button">Floating Button</string>
    <string name="cnext">Next</string>
    <string name="cskip">Skip</string>
    <string name="ctitle_activity_choose">ChooseActivity</string>
    <string name="csection_format">Hello World from section: %1$d</string>
    <string name="new_Game_Button">Start New Game</string>
    <string name="continue_Game_Button">Continue Game</string>
    <string name="Ranking_Button">Ranking</string>
    <string name="Record_Button">Record</string>
    <string name="Points_Button">Points</string>
    <string name="Winning_Message">You won. Would you like to continue?</string>
    <string name="Yes_Message">Yes</string>
    <string name="No_Message">No</string>
    <string name="Titel_V_Message">Victory</string>
    <string name="Titel_L_Message">Lost</string>
    <string name="Lost_Message">You lost. Would you like to start a new game?</string>

    <string name="Tutorial_Titel">Welcome!</string>
    <string name="Tutorial_Instruction">In the following slides you will learn how to play the Game 2048.</string>
    <string name="Tutorial_Titel_Move">Learn how to move the numbers!</string>
    <string name="Tutorial_Move">To move all the numbers in the possible position in one direction, you have to swipe your finger in the same way.</string>
    <string name="Tutorial_Titel_Add">How to Combine the Numbers!</string>
    <string name="Tutorial_Add">To get the next higher power of 2 you have to combine numbers with the same value. The goal is to reach 2048 and higher.</string>

    <!-- ###STATISTICS### -->
    <string name="Stat_High_Number">Highest Number</string>
    <string name="Stat_High_Point">Highest Score</string>
    <string name="Stat_Amount_Undo">Used Undo-Button</string>
    <string name="Stat_Amount_Swipe">Total Amount of Swipes</string>
    <string name="Stat_Swipes_Left">Left</string>
    <string name="Stat_Swipes_Right">Right</string>
    <string name="Stat_Swipes_Down">Down</string>
    <string name="Stat_Swipes_Up">Up</string>
    <string name="Stat_Time">Playing Time</string>
    <string name="Stat_Time_Swipes">Time per Swipe</string>


</resources>
