<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="431dp"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:background="@mipmap/ic_splash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="6x6"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

        <Button
            android:id="@+id/button_newGame6x6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_Game_Button" />

        <Button
            android:id="@+id/button_continueGame6x6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_Game_Button" />

        <Button
            android:id="@+id/button_highScore6x6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ranking_Button" />

    </LinearLayout>
</RelativeLayout>